[package]
name = "clock"
version = "0.1.2"
author = ["MoonSeok Choi <moonseoktech@gmail.com"]
about = "Gets and (aspriationally) sets the time"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
clap = {version ="4.4.18", features = ["derive"]}

[target.'cfg(windows)'.dependencies]
winapi = "0.3.9"
kernel32-sys = "0.2"

[target.'cfg(not(windows))'.dependencies]
libc = "0.2"